# NexusRAG

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  railway.json  render.yaml
.bazelbsp/: bazelbsp.trace.json
.bsp/: bazelbsp.json  projectview.bazelproject
backend/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml
backend/config/: __init__.py  settings.py
backend/scripts/: evaluate.py  ingest.py
backend/src/: __init__.py
backend/src/api/: __init__.py  dependencies.py  main.py  middleware.py  models.py  routes.py  websocket.py
backend/src/generation/: __init__.py  chain.py  llm.py  memory.py  prompts.py
backend/src/ingestion/: __init__.py  chunker.py  contextualizer.py  embedder.py  loader.py  ocr_manager.py  pipeline.py  scientific.py
backend/src/retrieval/: __init__.py  cache.py  query_transformer.py  reranker.py  retriever.py  vector_store.py
backend/src/utils/: __init__.py  exceptions.py  helpers.py  logger.py  security.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_generation.py  test_ingestion.py  test_retrieval.py
frontend/: .env.example  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vercel.json
frontend/src/app/: error.tsx  globals.css  layout.tsx
frontend/src/app/analytics/: error.tsx  page.tsx
frontend/src/app/api/v1/documents/upload/: route.ts
frontend/src/app/chat/: error.tsx  page.tsx
frontend/src/app/documents/: error.tsx  page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/analytics/: Dashboard.tsx
frontend/src/components/chat/: ApiKeyModal.tsx  ChatInterface.tsx  MessageBubble.tsx  SourcePanel.tsx
frontend/src/components/documents/: DocumentList.tsx  UploadZone.tsx
frontend/src/components/layout/: Header.tsx  PageTransition.tsx  Sidebar.tsx  ThemeProvider.tsx
frontend/src/hooks/: useChat.ts  useDocuments.ts  useStore.ts  useWebSocket.ts
frontend/src/lib/: api.ts  utils.ts  websocket.ts
frontend/src/types/: index.ts
